--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <main>
         <div class="container">
             <div class="row py-5 mt-4">
-                <div class="col-md-12 text-center">
+                <div class="col-md-6 text-center">
                     <h1 class="font-bold light-blue-text my-5">What We Do</h1>
                     <p>Computer vision and image processing aims to extract useful information from images and movies.</p>
                     <p>More intro here</p>
@@ -93,70 +93,78 @@
                         <li>Visual inspection for production lines</li>
                         <li>Building 3D models of the real world</li>
                     </ul>
-                    <!--Carousel Wrapper-->
-                    <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
-                        <!--Indicators-->
-                        <ol class="carousel-indicators">
-                            <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
-                            <li data-target="#carousel-example-2" data-slide-to="1"></li>
-                            <li data-target="#carousel-example-2" data-slide-to="2"></li>
-                        </ol>
-                        <!--/.Indicators-->
-                        <!--Slides-->
-                        <div class="carousel-inner" role="listbox">
-                            <div class="carousel-item active">
-                                <div class="view hm-black-light">
-                                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(68).jpg" alt="First slide">
-                                    <div class="mask"></div>
-                                </div>
-                                <div class="carousel-caption">
-                                    <h3 class="h3-responsive">Light mask</h3>
-                                    <p>First text</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <!--Mask color-->
-                                <div class="view hm-black-strong">
-                                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg" alt="Second slide">
-                                    <div class="mask"></div>
-                                </div>
-                                <div class="carousel-caption">
-                                    <h3 class="h3-responsive">Strong mask</h3>
-                                    <p>Secondary text</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <!--Mask color-->
-                                <div class="view hm-black-slight">
-                                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Third slide">
-                                    <div class="mask"></div>
-                                </div>
-                                <div class="carousel-caption">
-                                    <h3 class="h3-responsive">Slight mask</h3>
-                                    <p>Third text</p>
-                                </div>
-                            </div>
-                        </div>
-                        <!--/.Slides-->
-                        <!--Controls-->
-                        <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                        <!--/.Controls-->
-                    </div>
-                    <!--/.Carousel Wrapper-->
-                    <h1 class="font-bold light-blue-text my-5">See What We Do</h1>
-                    <p>VIDEO HERE</p>
-                    <h1 class="font-bold light-blue-text my-5">Who We are</h1>
-                    <p>Brief history and people working</p>
-                    <h1 class="font-bold light-blue-text my-5">Our Work</h1>
+                </div>
+                <div class='col-md-6 text-center'>
+                    <a class="twitter-timeline" data-width="100%" data-height='500px' href="https://twitter.com/RITimagingsci?ref_src=twsrc%5Etfw">Tweets by RITimagingsci</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </div>
+            <div class='row'>
+                <!--Carousel Wrapper-->
+                <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
+                    <!--Indicators-->
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-2" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-2" data-slide-to="2"></li>
+                    </ol>
+                    <!--/.Indicators-->
+                    <!--Slides-->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <div class="view hm-black-light">
+                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(68).jpg" alt="First slide">
+                                <div class="mask"></div>
+                            </div>
+                            <div class="carousel-caption">
+                                <h3 class="h3-responsive">Light mask</h3>
+                                <p>First text</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <!--Mask color-->
+                            <div class="view hm-black-strong">
+                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg" alt="Second slide">
+                                <div class="mask"></div>
+                            </div>
+                            <div class="carousel-caption">
+                                <h3 class="h3-responsive">Strong mask</h3>
+                                <p>Secondary text</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <!--Mask color-->
+                            <div class="view hm-black-slight">
+                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Third slide">
+                                <div class="mask"></div>
+                            </div>
+                            <div class="carousel-caption">
+                                <h3 class="h3-responsive">Slight mask</h3>
+                                <p>Third text</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/.Slides-->
+                    <!--Controls-->
+                    <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                    <!--/.Controls-->
+                </div>
+                <!--/.Carousel Wrapper-->
+            </div>
+            <div class='row'>
+            	<div class='col-md-12 text-center'>
+	                <h1 class="font-bold light-blue-text my-5">See What We Do</h1>
+	                <p>VIDEO HERE</p>
+	                <h1 class="font-bold light-blue-text my-5">Who We are</h1>
+	                <p>Brief history and people working</p>
+	                <h1 class="font-bold light-blue-text my-5">Our Work</h1>
+	            </div>
         </div>
 
 
